crates/ruff_python_parser/tests/snapshots/invalid_syntax@function_def_unclosed_parameter_list.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/function_def_unclosed_parameter_list.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..74,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..18,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..18,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 8..14,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 8..14,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 8..9,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 11..14,
                                                id: Name("int"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    is_context: false,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                range: 16..18,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 16..18,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 16..17,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                    is_context: false,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    raises: None,
                    body: [],
                    is_trailing_lambda: false,
                    is_asserts_return: false,
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 19..43,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 23..26,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 26..28,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    raises: None,
                    body: [
                        Return(
                            StmtReturn {
                                node_index: NodeIndex(None),
                                range: 34..43,
                                value: Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 41..43,
                                            value: Int(
                                                42,
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ),
                    ],
                    is_trailing_lambda: false,
                    is_asserts_return: false,
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 44..74,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 48..51,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 51..74,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 52..58,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 52..58,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 52..53,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 55..58,
                                                id: Name("int"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    is_context: false,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                range: 60..66,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 60..66,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 60..61,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 63..66,
                                                id: Name("str"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    is_context: false,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                range: 67..73,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 67..68,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("x"),
                                        range: 67..68,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                    is_context: false,
                                },
                                default: Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 71..73,
                                            value: Int(
                                                10,
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    raises: None,
                    body: [],
                    is_trailing_lambda: false,
                    is_asserts_return: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(a: int, b:
2 | def foo():
  | ^^^ Syntax Error: Expected an expression
3 |     return 42
4 | def foo(a: int, b: str
  |


  |
1 | def foo(a: int, b:
  |                   ^ Syntax Error: Expected `)`, found newline
2 | def foo():
3 |     return 42
4 | def foo(a: int, b: str
  |


  |
3 |     return 42
4 | def foo(a: int, b: str
5 | x = 10
  | ^ Syntax Error: Expected `,`, found name
  |


  |
4 | def foo(a: int, b: str
5 | x = 10
  |       ^ Syntax Error: unexpected EOF while parsing
  |
